@startuml
hide circle
skinparam classAttributeIconSize 0

class "{abstract}\nCommand" as Command
class HelpCommand
class CommandResult
interface Model
class AddressBookParser
class MainWindow
class HelpWindow
class BrowserUtil

HelpCommand -up-|> Command
AddressBookParser ..> HelpCommand : creates
HelpCommand ..> CommandResult : returns
HelpCommand ..> Model : uses
MainWindow ..> HelpWindow : showHelp()
HelpWindow ..> BrowserUtil : open(url)
@enduml
